flapivor/tests/m3/hopix/typechecker/good/35-recursive-datatype-02.hopix
type T = N | `(T, T)

val leaf : T = N<>

val a_tree : T = `<> (`<> (`<> (leaf, leaf), `<>(leaf, `<>(leaf, leaf))), leaf)