flapivor/tests/m3/hopix/typechecker/bad/46-constructor-02.hopix
type T = A

val main : Int = A<> (1)


